test/error/test7.pl0
PROGRAM test7
VAR x,y;
BEGIN
    x:=1;
    y:=1+x*(4+1
END